# naoqi_driver2

./: .clang-format  .gitignore  AGENTS.md  ASSUMPTIONS.md  CHANGELOG.rst  CMakeLists.txt  CURRENT_PLAN.md  README.md  dependencies.repos  docker-compose.yaml  naoqi_driver_hardware.xml  package.xml  rviz1_to_rviz2.py  test_emulation.sh
.github/workflows/: foxy_focal.yml  galactic_focal.yml  humble_jammy.yml  iron_jammy.yml  jazzy_noble.yml  kilted_noble.yml  rolling_noble.yml  rolling_resolute.yml  ros-buildfarm-watch.yml  ros2.yml
ci/: upstream.repos
config/: nao_controllers.yaml  pepper_controllers.yaml
doc/: ros2_control_test_plan.md
docker/: Dockerfile  entrypoint.sh
include/naoqi_driver/: helpers.hpp  message_actions.h  naoqi_driver.hpp  ros_helpers.hpp  tools.hpp
include/naoqi_driver/converter/: converter.hpp
include/naoqi_driver/event/: event.hpp
include/naoqi_driver/hardware/: almotion_system.hpp  dcm_system.hpp  joint_state_keys.hpp  lola_protocol.hpp  lola_system.hpp  session_factory.hpp
include/naoqi_driver/publisher/: publisher.hpp
include/naoqi_driver/recorder/: globalrecorder.hpp  recorder.hpp
include/naoqi_driver/service/: service.hpp
include/naoqi_driver/subscriber/: subscriber.hpp
launch/: naoqi_driver.launch.py  ros2_control.launch.py
share/: nao.rviz
share/ros2_control/: nao.urdf.xacro  naoqi_system.ros2_control.xacro  pepper.urdf.xacro
src/: autoload_registration.cpp  driver_authenticator.hpp  external_registration.cpp  naoqi_driver.cpp  ros_env.hpp
src/actions/: listen.cpp  listen.hpp
src/converters/: audio.cpp  audio.hpp  camera.cpp  camera.hpp  camera_info_definitions.hpp  converter_base.hpp  diagnostics.cpp  diagnostics.hpp  imu.cpp  imu.hpp  info.cpp  info.hpp  joint_state.cpp  joint_state.hpp  laser.cpp  laser.hpp  log.cpp  log.hpp  memory_list.cpp  memory_list.hpp  nao_footprint.hpp  odom.cpp  odom.hpp  sonar.cpp  sonar.hpp  touch.cpp  touch.hpp
src/converters/memory/: bool.cpp  bool.hpp  float.cpp  float.hpp  int.cpp  int.hpp  string.cpp  string.hpp
src/event/: audio.cpp  audio.hpp  basic.hpp  basic.hxx  touch.cpp  touch.hpp
src/fake_naoqi/: fake_almemory.cpp  fake_almemory.hpp  fake_almotion.cpp  fake_almotion.hpp  fake_dcm.cpp  fake_dcm.hpp  fake_naoqi.cpp  fake_naoqi.hpp  fake_services.cpp  fake_services.hpp
src/hardware/: almotion_system.cpp  dcm_system.cpp  joint_state_keys.cpp  lola_protocol.cpp  lola_system.cpp  session_factory.cpp
src/helpers/: driver_helpers.cpp  driver_helpers.hpp  filesystem_helpers.hpp  naoqi_helpers.hpp  recorder_helpers.hpp  ros_helpers.cpp  time_helpers.hpp  transform_helpers.hpp
src/publishers/: basic.hpp  camera.cpp  camera.hpp  info.cpp  info.hpp  joint_state.cpp  joint_state.hpp  log.cpp  log.hpp  sonar.cpp  sonar.hpp
src/publishers/memory/: bool.cpp  bool.hpp  float.cpp  float.hpp  int.cpp  int.hpp  string.cpp  string.hpp
src/recorder/: basic.hpp  basic_event.hpp  camera.cpp  camera.hpp  diagnostics.cpp  diagnostics.hpp  globalrecorder.cpp  joint_state.cpp  joint_state.hpp  log.cpp  log.hpp  sonar.cpp  sonar.hpp
src/services/: get_language.cpp  get_language.hpp  robot_config.cpp  robot_config.hpp  set_language.cpp  set_language.hpp
src/subscribers/: moveto.cpp  moveto.hpp  speech.cpp  speech.hpp  subscriber_base.hpp  teleop.cpp  teleop.hpp
src/tools/: alvisiondefinitions.h  from_any_value.cpp  from_any_value.hpp  naoqi_image.hpp  robot_description.cpp  robot_description.hpp  subscribe_almemory.cpp  subscribe_almemory.hpp
test/: almotion_system_test.cpp  dcm_system_test.cpp  fake_almotion_test.cpp  fake_lola_server.hpp  lola_system_test.cpp  real_robot_move.sh
tools/release/: RELEASING.md  ROLLING_ros2-gbp.md  finalize_release.py  setup_tracks.py
tools/release/patches/: 0001-Replace-geometry_msgs-Pose2D-with-local-Pose2D.patch  0002-2.1.1.patch
